login adds jwt to cookies